--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -347,6 +347,18 @@
       ]
     },
     {
+  "type": "custom_html",
+  "name": "Custom HTML",
+  "settings": [
+    {
+      "type": "liquid",
+      "id": "custom_code",
+      "label": "HTML / Liquid Code",
+      "default": "<div>Your custom HTML here</div>"
+    }
+  ]
+},
+    {
       "type": "brand_information",
       "name": "t:sections.footer.blocks.brand_information.name",
       "settings": [
