--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -102,8 +102,8 @@
                       </ul>
                     {%- endif -%}
                       {%- when 'custom_html' -%}
-                    {%- if block.settings.custom_html != blank -%}
-                     {{ block.settings.custom_html }}
+                    {%- if block.settings.custom_code != blank -%}
+                     {{ block.settings.custom_code }}
                     {%- endif -%}
                   {%- when 'brand_information' -%}
                     <div class="footer-block__brand-info">
