--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1,12 +1,12 @@
 .nzam-footer-contact {
-  background: linear-gradient(90deg, #111111 0%, #1a1a1a 100%);
+  
   padding: 60px 40px;
   max-width: 500px;
   color: #ffffff;
   font-family: Arial, sans-serif;
 }
 .newclass {
-    background: linear-gradient(90deg, #111111 0%, #1a1a1a 100%);
+    background: #1C1C1C;
 }
 
 .nzam-footer-contact h3 {
