--- a/assets/custom.css
+++ b/assets/custom.css
@@ -3,6 +3,7 @@
   max-width: 500px;
   color: #ffffff;
   font-family: Arial, sans-serif;
+  text-align: left;
 }
 .newclass {
     background: #1C1C1C;
