--- a/assets/custom.css
+++ b/assets/custom.css
@@ -5,6 +5,15 @@
 nav.header__inline-menu li a, nav.header__inline-menu li span, nav.header__inline-menu li {
     color: #fff;
 }
+header#hello {
+    max-width: 80%;
+    display: flex;
+    justify-content: space-between;
+}
+.header__icons svg {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(143deg) brightness(106%) contrast(106%);
+}
+/*** footer ***/
 .nzam-footer-contact {
   
   padding: 60px 40px;
