--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -494,5 +494,6 @@
 
 .banner__heading.inline-richtext strong{
   color: #FFC72C;
-  font-weight: normal;
+  font-weight: normal !important;
+  font-size: 50px;
 }
