--- a/assets/custom.css
+++ b/assets/custom.css
@@ -13,6 +13,10 @@ header#hello {
 .header__icons svg {
     filter: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(0%) hue-rotate(143deg) brightness(106%) contrast(106%);
 }
+.header__submenu {
+    background: #1c1c1c;
+    border-bottom: 3px solid #FFC72C !important;
+}
 /*** footer ***/
 .nzam-footer-contact {
   padding: 60px 40px;
@@ -61,7 +65,7 @@ header#hello {
 .nzam-about p {
   color: #cccccc;
   line-height: 1.6;
-  font-size: 15px;
+  font-size: 35px;
   margin-bottom: 20px;
 }
 
