--- a/assets/custom.css
+++ b/assets/custom.css
@@ -80,3 +80,9 @@ header#hello {
 .learn-more:hover {
   color: #f4c430;
 }
+
+.banner__heading.inline-richtext{
+  font-weight: bold;
+  font-size: 50px;
+}
+*{color: rgb(0, 221, 255) !important;}
